syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ApplicantJobApplication{
	rpc ReadApplicantJobApplication (ApplicantJobApplicationIdRequest) returns (ApplicantJobApplicationPayload);
	rpc GetAllApplicantJobApplication (google.protobuf.Empty) returns (AllApplicantJobApplicationPayload);
	rpc CreateApplicantJobApplication (ApplicantJobApplicationPayload) returns (google.protobuf.Empty);
	rpc UpdateApplicantJobApplication (ApplicantJobApplicationPayload) returns (google.protobuf.Empty);
	rpc DeleteApplicantJobApplication (ApplicantJobApplicationPayload) returns (google.protobuf.Empty);
}

message ApplicantJobApplicationIdRequest{
	string Id =1;
}

message ApplicantJobApplicationPayload {
	string Id = 1;
	string Applicant = 2;
	string Job = 3;
	google.protobuf.Timestamp ApplicationDate = 4;
}

message AllApplicantJobApplicationPayload {
	repeated ApplicantJobApplicationPayload ApplicantJobApplications = 1;
}